--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="" width="160" height="40">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -49,11 +51,12 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded-3">
                     <div class="carousel-item active">
-                        <div class="row ">
+                        <div class="row px-5">
                             <div class="col-md-7 col-sm-12 p-5">
-                                <div class="pt-5 ps-5">
+                                <div class="pt-5">
                                     <h1 class="pt-5 ps-5">Mi LED TV 4A PRO 32</h1>
-                                    <p class="pt-1 ps-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                                    <p class="lead pt-1 ps-5">Amet minim mollit non deserunt ullamco est sit aliqua
+                                        dolor do
                                         amet
                                         sint.
                                         Velit
@@ -73,11 +76,12 @@
                         </div>
                     </div>
                     <div class="carousel-item rounded-3">
-                        <div class="row">
+                        <div class="row px-5">
                             <div class="col-md-7 col-sm-12 p-5">
-                                <div class="pt-5 ps-5">
+                                <div class="pt-5">
                                     <h1 class="pt-5 ps-5">Mi LED TV 4A PRO 32</h1>
-                                    <p class="pt-1 ps-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                                    <p class="lead pt-1 ps-5">Amet minim mollit non deserunt ullamco est sit aliqua
+                                        dolor do
                                         amet
                                         sint.
                                         Velit
@@ -97,11 +101,12 @@
                         </div>
                     </div>
                     <div class="carousel-item rounded-3">
-                        <div class="row">
+                        <div class="row px-5">
                             <div class="col-md-7 col-sm-12 p-5">
-                                <div class="pt-5 ps-5">
+                                <div class="pt-5">
                                     <h1 class="pt-5 ps-5">Mi LED TV 4A PRO 32</h1>
-                                    <p class="pt-1 ps-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                                    <p class="lead pt-1 ps-5">Amet minim mollit non deserunt ullamco est sit aliqua
+                                        dolor do
                                         amet
                                         sint.
                                         Velit
@@ -140,19 +145,19 @@
             <div class="container">
                 <h2>Categories</h2>
                 <div class="row g-5 p-5">
-                    <div class="col-md-4 col-sm-12 bg-warning p-3 rounded-3">
+                    <div class="col-md-4 col-sm-12 bg-warning p-3 rounded-3 mx-1" style="width: 25rem;">
                         <div class="d-flex justify-content-evenly align-items-center">
                             <h3>Watch</h3>
                             <img src="images/categories/watch.png" alt="" width="65" height="90">
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-12 bg-danger p-3 rounded-3">
+                    <div class="col-md-4 col-sm-12 bg-danger p-3 rounded-3 mx-1" style="width: 25rem;">
                         <div class="d-flex justify-content-evenly align-items-center">
                             <h3>Bag</h3>
                             <img src="images/categories/bag.png" alt="" width="65" height="90">
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-12 bg-primary p-3 rounded-3">
+                    <div class="col-md-4 col-sm-12 bg-primary p-3 rounded-3 mx-1" style="width: 25rem;">
                         <div class="d-flex justify-content-evenly align-items-center">
                             <h3>Shoes</h3>
                             <img src="images/categories/shoes.png" alt="" width="65" height="90">
@@ -165,7 +170,7 @@
             <div class="container">
                 <h2>Shoes</h2>
                 <div class="row d-flex justify-content-evenly p-5">
-                    <div class="col-4 card text-center rounded-3" style="width: 18rem;">
+                    <div class="col-4 card text-center rounded-3 m-3" style="width: 23rem;">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
@@ -176,7 +181,7 @@
                             <a href="#" class="btn btn-dark">BUY NOW</a>
                         </div>
                     </div>
-                    <div class="col-4 card text-center rounded-3" style="width: 18rem;">
+                    <div class="col-4 card text-center rounded-3 m-3" style="width: 23rem;">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Reebok Pump</h5>
@@ -187,7 +192,7 @@
                             <a href="#" class="btn btn-dark">BUY NOW</a>
                         </div>
                     </div>
-                    <div class="col-4 card text-center rounded-3" style="width: 18rem;">
+                    <div class="col-4 card text-center rounded-3 m-3" style="width: 23rem;">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Reebok All Terrain</h5>
@@ -203,7 +208,7 @@
             <div class="container">
                 <h2>Backpack</h2>
                 <div class="row d-flex justify-content-evenly p-5">
-                    <div class="col-4 card text-center rounded-3" style="width: 18rem;">
+                    <div class="col-4 card text-center rounded-3 m-3" style="width: 23rem;">
                         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Ison Backpack</h5>
@@ -214,7 +219,7 @@
                             <a href="#" class="btn btn-dark">BUY NOW</a>
                         </div>
                     </div>
-                    <div class="col-4 card text-center rounded-3" style="width: 18rem;">
+                    <div class="col-4 card text-center rounded-3 m-3" style="width: 23rem;">
                         <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Biaowang Backpack</h5>
@@ -225,7 +230,7 @@
                             <a href="#" class="btn btn-dark">BUY NOW</a>
                         </div>
                     </div>
-                    <div class="col-4 card text-center rounded-3" style="width: 18rem;">
+                    <div class="col-4 card text-center rounded-3 m-3" style="width: 23rem;">
                         <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Dxyizu WS54 Smart</h5>
@@ -241,13 +246,17 @@
         </section>
     </main>
     <footer>
-        <div class="container text-center p-5">
-            <h3>LET'S STAY IN TOUCH</h3>
-            <P>Get updates on sales specials and more</P>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Enter your email" aria-label="Recipient's username"
-                    aria-describedby="basic-addon2">
-                <span class="input-group-text" id="basic-addon2">SEND</span>
+        <div class="p-5">
+            <div class="footer p-5 rounded-3 ">
+                <div class="container p-5 text-center w-50">
+                    <h3>LET'S STAY IN TOUCH</h3>
+                    <P>Get updates on sales specials and more</P>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Enter your email"
+                            aria-label="Recipient's username" aria-describedby="basic-addon2">
+                        <span class="input-group-text" id="basic-addon2">SEND</span>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
