--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             </div>
         </nav>
 
-        <div class="container p-5 rounded-3">
+        <div class="container rounded-3">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded-3">
                     <div class="carousel-item active">
-                        <div class="row px-5">
-                            <div class="col-md-7 col-sm-12 p-5">
-                                <div class="pt-5">
+                        <div class="row py-3">
+                            <div class="col-md-7 col-sm-12 pt-5 pe-5">
+                                <div class="">
                                     <h1 class="pt-5 ps-5">Mi LED TV 4A PRO 32</h1>
                                     <p class="lead pt-1 ps-5">Amet minim mollit non deserunt ullamco est sit aliqua
                                         dolor do
@@ -70,15 +70,15 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5 col-sm-12 p-5 ps-5">
+                            <div class="col-md-5 col-sm-12">
                                 <img src="images/banner-images/tv.png" alt="" width="400">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item rounded-3">
-                        <div class="row px-5">
-                            <div class="col-md-7 col-sm-12 p-5">
-                                <div class="pt-5">
+                        <div class="row py-3">
+                            <div class="col-md-7 col-sm-12 pt-5 pe-5">
+                                <div class="">
                                     <h1 class="pt-5 ps-5">Mi LED TV 4A PRO 32</h1>
                                     <p class="lead pt-1 ps-5">Amet minim mollit non deserunt ullamco est sit aliqua
                                         dolor do
@@ -95,15 +95,15 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5 col-sm-12 p-5 ps-5">
+                            <div class="col-md-5 col-sm-12">
                                 <img src="images/banner-images/headphone.png" alt="" width="400">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item rounded-3">
-                        <div class="row px-5">
-                            <div class="col-md-7 col-sm-12 p-5">
-                                <div class="pt-5">
+                        <div class="row py-3">
+                            <div class="col-md-7 col-sm-12  pt-5 pe-5">
+                                <div class="">
                                     <h1 class="pt-5 ps-5">Mi LED TV 4A PRO 32</h1>
                                     <p class="lead pt-1 ps-5">Amet minim mollit non deserunt ullamco est sit aliqua
                                         dolor do
@@ -120,7 +120,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5 col-sm-12 p-5 ps-5">
+                            <div class="col-md-5 col-sm-12">
                                 <img src="images/banner-images/xbox.png" alt="" width="400">
                             </div>
                         </div>
@@ -246,8 +246,8 @@
         </section>
     </main>
     <footer>
-        <div class="footer p-5 rounded-3 ">
-            <div class="container p-5 text-center w-50">
+        <div class="footer rounded-3 ">
+            <div class="container p-3 text-center w-50">
                 <h3>LET'S STAY IN TOUCH</h3>
                 <P>Get updates on sales specials and more</P>
                 <div class="input-group mb-3">
