--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </nav>
 
-        <div class="container rounded-3">
+        <div class="container rounded-3 pt-3">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded-3">
                     <div class="carousel-item active">
@@ -139,10 +139,8 @@
                 </button>
             </div>
         </div>
-    </header>
-    <main>
         <section id="categories">
-            <div class="container">
+            <div class="container pt-3">
                 <h2>Categories</h2>
                 <div class="row g-5 p-5">
                     <div class="col-md-4 col-sm-12 bg-warning p-3 rounded-3 mx-1" style="width: 25rem;">
@@ -166,9 +164,14 @@
                 </div>
             </div>
         </section>
+    </header>
+    <main>
+
         <section id="shoes" class="pt-5 mb-5">
             <div class="container">
-                <h2>Shoes</h2>
+                <div class="d-flex justify-content-between align-items-center">
+                    <h2>Shoes</h2><span><a class="text-warning nav-link" href="">see all</a></span>
+                </div>
                 <div class="row d-flex justify-content-evenly p-5">
                     <div class="col-4 card text-center rounded-3 m-3" style="width: 23rem;">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -206,7 +209,9 @@
                 </div>
             </div>
             <div class="container">
-                <h2>Backpack</h2>
+                <div class="d-flex justify-content-between align-items-center">
+                    <h2>Backpack</h2><span><a class="text-warning nav-link" href="">see all</a></span>
+                </div>
                 <div class="row d-flex justify-content-evenly p-5">
                     <div class="col-4 card text-center rounded-3 m-3" style="width: 23rem;">
                         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
