--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5 col-sm-12">
+                            <div class="col-md-5 col-sm-12 pe-5">
                                 <img src="images/banner-images/tv.png" alt="" width="400">
                             </div>
                         </div>
@@ -95,7 +95,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5 col-sm-12">
+                            <div class="col-md-5 col-sm-12 pe-5">
                                 <img src="images/banner-images/headphone.png" alt="" width="400">
                             </div>
                         </div>
@@ -120,7 +120,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5 col-sm-12">
+                            <div class="col-md-5 col-sm-12 pe-5">
                                 <img src="images/banner-images/xbox.png" alt="" width="400">
                             </div>
                         </div>
